@@ -48,6 +48,7 @@ import org.stagemonitor.configuration.ConfigurationRegistry;
 
 import java.lang.annotation.Retention;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Set;
 
 import static java.lang.annotation.RetentionPolicy.RUNTIME;
@@ -105,6 +106,18 @@ class TraceMethodInstrumentationTest {
         assertThat(reporter.getFirstTransaction().getNameAsString()).isEqualTo("TestClass#traceMe");
         assertThat(reporter.getSpans()).hasSize(1);
         assertThat(reporter.getFirstSpan().getNameAsString()).isEqualTo("TestClass#traceMeToo");
+    }
+
+    @Test
+    void testReInitTraceMethod() throws Exception {
+        when(coreConfiguration.getTraceMethods()).thenReturn(
+            List.of(MethodMatcher.of("private co.elastic.apm.agent.bci.methodmatching.TraceMethodInstrumentationTest$TestClass#traceMe()")));
+        ElasticApmAgent.reInitInstrumentation().get();
+        TestClass.traceMe();
+        assertThat(reporter.getTransactions()).hasSize(1);
+        assertThat(reporter.getFirstTransaction().getNameAsString()).isEqualTo("TestClass#traceMe");
+        // if original configuration was used, a span would have been created - see `testTraceMethod`
+        assertThat(reporter.getSpans()).hasSize(0);
     }
 
     @Test
